--- a/res/layout/list_report_item_edit.xml
+++ b/res/layout/list_report_item_edit.xml
@@ -9,21 +9,37 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal" >
-        
-	    <TextView
-	        android:id="@+id/amountTextView"
+
+	    <LinearLayout
 	        android:layout_width="0dp"
-	        android:layout_height="match_parent"
+	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:layout_marginLeft="16dp"
-	        android:gravity="center_vertical"
-	        android:textColor="@color/font_major_dark"
-	        android:textSize="22sp" />
+	        android:layout_gravity="center_vertical"
+	        android:gravity="bottom" >
+	
+	        <TextView
+	            android:id="@+id/amountTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:ellipsize="end"
+	            android:singleLine="true"
+	            android:textColor="@color/font_major_dark"
+	            android:textSize="22sp" />
+	
+	        <TextView
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="3dp"
+	            android:text="@string/rmb_symbol"
+	            android:textColor="@color/font_major_dark"
+	            android:textSize="14sp" />
+	    </LinearLayout>
 	
 	    <ImageView
 	        android:id="@+id/warningImageView"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_width="30dp"
+	        android:layout_height="30dp"
 			android:layout_gravity="center"
 			android:contentDescription="@string/warning"
 	        android:src="@drawable/warning"
@@ -34,7 +50,6 @@
 	        android:layout_height="match_parent"
 	        android:layout_weight="1"
 	        android:orientation="vertical"
-	        android:layout_marginLeft="16dp"
 	        android:layout_marginRight="16dp" >
 	
 	        <TextView
@@ -55,7 +70,7 @@
 	            android:layout_below="@+id/vendorTextView"
 	            android:layout_alignParentRight="true"
 	            android:layout_marginTop="6dp"
-	            android:contentDescription="@string/tag"
+	            android:contentDescription="@string/category"
 	            android:src="@drawable/default_icon" />
 	        
 	    </RelativeLayout>
