--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:text="@string/rmb_symbol"
-                android:textColor="@color/hint_black"
+                android:textColor="@color/font_major_dark"
                 android:textSize="16sp" />
         </LinearLayout>
 
