--- a/res/layout/list_report.xml
+++ b/res/layout/list_report.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/rmb_symbol"
-                android:textColor="@color/hint_black"
+                android:textColor="@color/font_major_dark"
                 android:textSize="14sp" />
         </LinearLayout>
 
