--- a/res/layout/list_report_item_show.xml
+++ b/res/layout/list_report_item_show.xml
@@ -3,16 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/list_item_drawable" >
+    android:background="@drawable/list_item_drawable"
+    android:baselineAligned="false" >
 
-    <TextView
-        android:id="@+id/amountTextView"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:gravity="center"
-        android:textColor="@color/font_major_dark"
-        android:textSize="22sp" />
+        android:layout_gravity="center_vertical"
+        android:gravity="bottom"
+        android:baselineAligned="true" >
+
+        <TextView
+            android:id="@+id/amountTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/font_major_dark"
+            android:textSize="22sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:text="@string/rmb_symbol"
+            android:textColor="@color/font_major_dark"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="0dp"
