fix bugs of push

--- a/app/src/main/res/layout/activity_report_edit.xml
+++ b/app/src/main/res/layout/activity_report_edit.xml
@@ -70,6 +70,8 @@
 			        android:layout_marginRight="16dp"
 			    	android:focusable="true"
 			   		android:focusableInTouchMode="true" >
+
+                    <requestFocus/>
 			
 			        <EditText
 			            android:id="@+id/titleEditText"
