--- a/app/src/main/res/layout/activity_reim_edit.xml
+++ b/app/src/main/res/layout/activity_reim_edit.xml
@@ -77,24 +77,26 @@
 	                android:layout_marginTop="24dp"
 	                android:layout_marginLeft="16dp"
 	                android:layout_marginRight="16dp" >
+
+                    <requestFocus/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/rmb_symbol"
+                        android:textColor="@color/major_dark"
+                        android:textSize="18sp" />
 	
 		            <EditText
 		                android:id="@+id/amountEditText"
-		                android:layout_width="wrap_content"
+		                android:layout_width="0dp"
 		                android:layout_height="wrap_content"
-		                android:minWidth="10dp"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="6dp"
 		                android:inputType="numberDecimal"
 		                android:background="@null"
 	                    android:textColor="@color/font_reim_number"
 	                    android:textSize="54sp" />
-
-	                <TextView
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:layout_marginLeft="6dp"
-	                    android:text="@string/rmb_symbol"
-	                    android:textColor="@color/major_dark"
-	                    android:textSize="18sp" />
 
 	            </LinearLayout>
 
