--- a/app/src/main/res/layout/activity_start_sign_in.xml
+++ b/app/src/main/res/layout/activity_start_sign_in.xml
@@ -28,20 +28,21 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="72dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/start_icon" />
+        android:src="@drawable/start_icon"
+        android:id="@+id/imageView2"/>
 
     <EditText
         android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_marginTop="190dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:hint="@string/input_username"
         android:inputType="text"
         android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
+        android:textColorHint="@color/hint_white"
+        android:textSize="18sp"
         android:background="@null"
         android:textCursorDrawable="@null" />
 
@@ -91,43 +92,47 @@
         android:layout_marginRight="16dp"
         android:background="@drawable/button_long_light_solid_drawable"
         android:text="@string/sign_in"
-        android:textColor="@color/start_button_text_color"
-        android:textSize="20sp" />
+        android:textColor="@color/start_button_text_color" />
 
     <TextView
         android:id="@+id/forgotTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/signInButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="14dp"
-        android:layout_marginLeft="16dp"
+        android:padding="16dp"
         android:text="@string/forgot_password"
         android:textSize="14sp"
         android:textColor="@color/font_start" />
 
-    <ImageView
-        android:id="@+id/signUpImageView"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-		android:layout_marginRight="16dp"
-        android:contentDescription="@string/sign_up"
-        android:src="@drawable/jump" />
-
-    <TextView
-        android:id="@+id/signUpTextView"
+    <LinearLayout
+        android:id="@+id/signUpLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/signUpImageView"
-        android:layout_marginBottom="14dp"
-        android:layout_marginRight="6dp"        
-        android:text="@string/sign_up"
-        android:textSize="14sp" 
-        android:textColor="@color/font_start" />
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/signUpImageView"
+            android:layout_marginRight="6dp"
+            android:text="@string/sign_up"
+            android:textColor="@color/font_start"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/signUpImageView"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:contentDescription="@string/sign_up"
+            android:src="@drawable/jump" />
+    </LinearLayout>
 
 </RelativeLayout>
