--- a/app/src/main/res/layout/activity_me_send_invite.xml
+++ b/app/src/main/res/layout/activity_me_send_invite.xml
@@ -66,11 +66,11 @@
     <Button
 		android:id="@+id/inviteButton"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="@dimen/button_height"
 		android:layout_marginTop="22dp"
 		android:layout_marginLeft="16dp"
 		android:layout_marginRight="16dp"
-		android:background="@drawable/button_long_dark_drawable"
+		android:background="@drawable/button_dark_drawable"
 		android:text="@string/send_invite"
 		android:textColor="@color/button_text_light_color" />
 
