--- a/app/src/main/res/layout/activity_start_reset_password.xml
+++ b/app/src/main/res/layout/activity_start_reset_password.xml
@@ -7,7 +7,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:contentDescription="@string/background"
         android:scaleType="fitXY"
         android:src="@drawable/start_background" />
@@ -20,7 +19,6 @@
             android:id="@+id/backImageView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -37,68 +35,68 @@
 
     </RelativeLayout>
 
-    <EditText
-        android:id="@+id/newPasswordEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="@string/input_password"
-        android:inputType="textPassword"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <include 
-        android:id="@+id/divider1"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/newPasswordEditText"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+        <EditText
+            android:id="@+id/newPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="108dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:hint="@string/input_password"
+            android:inputType="textPassword"
+            android:textColor="@color/font_major_light"
+            android:textColorHint="@color/hint_white"
+            android:background="@null"
+            android:textCursorDrawable="@null" />
 
-    <EditText
-        android:id="@+id/confirmPasswordEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/newPasswordEditText"
-        android:layout_alignRight="@+id/newPasswordEditText"
-        android:layout_below="@+id/divider1"
-        android:layout_marginTop="12dp"
-        android:hint="@string/input_confirm_password"
-        android:inputType="textPassword"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
 
-    <include 
-        android:id="@+id/divider2"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/confirmPasswordEditText"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+        <EditText
+            android:id="@+id/confirmPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:hint="@string/input_confirm_password"
+            android:inputType="textPassword"
+            android:textColor="@color/font_major_light"
+            android:textColorHint="@color/hint_white"
+            android:background="@null"
+            android:textCursorDrawable="@null" />
 
-    <Button
-        android:id="@+id/completeButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/divider2"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/button_long_light_solid_drawable"
-        android:text="@string/complete"
-        android:textColor="@color/start_button_text_color"
-        android:textSize="20sp" />
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
+
+        <Button
+            android:id="@+id/completeButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/button_light_solid_drawable"
+            android:text="@string/complete"
+            android:textColor="@color/start_button_text_color"
+            android:textSize="20sp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
