--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -61,12 +61,12 @@
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/button_height"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/button_long_dark_drawable"
+        android:background="@drawable/button_dark_drawable"
         android:text="@string/confirm"
         android:textColor="@color/button_text_light_color"  />
 
