--- a/app/src/main/res/layout/activity_me_feedback.xml
+++ b/app/src/main/res/layout/activity_me_feedback.xml
@@ -106,11 +106,11 @@
         <Button
             android:id="@+id/submitButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/button_height"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/button_long_dark_drawable"
+            android:background="@drawable/button_dark_drawable"
             android:text="@string/submit"
             android:textColor="@color/button_text_light_color" />
         
