--- a/app/src/main/res/layout/activity_me_invite.xml
+++ b/app/src/main/res/layout/activity_me_invite.xml
@@ -59,24 +59,24 @@
         <Button
             android:id="@+id/agreeButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/button_height"
             android:layout_above="@+id/rejectButton"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/button_long_dark_drawable"
+            android:background="@drawable/button_dark_drawable"
             android:text="@string/join_group"
             android:textColor="@color/button_text_light_color" />
 
         <Button
             android:id="@+id/rejectButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/button_height"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="22dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/button_long_light_solid_drawable"
+            android:background="@drawable/button_light_solid_drawable"
             android:text="@string/reject_invite"
             android:textColor="@color/hint_grey" />
         
