--- a/app/src/main/res/layout/activity_reim_edit.xml
+++ b/app/src/main/res/layout/activity_reim_edit.xml
@@ -366,8 +366,7 @@
 	                android:layout_alignParentTop="true"
 	                android:layout_toLeftOf="@+id/addTagImageView"
 	                android:paddingBottom="17dp"
-	                android:layout_marginLeft="80dp" >
-	            </LinearLayout>
+	                android:layout_marginLeft="80dp" />
 
 	            <ImageView
 	                android:id="@+id/addTagImageView"
@@ -406,13 +405,12 @@
 	                android:id="@+id/memberLayout"
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
-	            	android:minHeight="56dp"
+                    android:layout_marginLeft="80dp"
+                    android:paddingBottom="18dp"
+                    android:minHeight="56dp"
 	            	android:orientation="vertical"
 	                android:layout_alignParentTop="true"
-	                android:layout_toLeftOf="@+id/addMemberImageView"
-	                android:paddingBottom="18dp"
-	                android:layout_marginLeft="80dp" >
-	            </LinearLayout>
+	                android:layout_toLeftOf="@+id/addMemberImageView" />
 
 	            <ImageView
 	                android:id="@+id/addMemberImageView"
@@ -453,10 +451,10 @@
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
-	                android:layout_marginTop="16dp"
-	                android:layout_marginBottom="16dp"
 	                android:layout_marginLeft="80dp"
 	                android:layout_marginRight="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
 	                android:background="@null"
 	            	android:hint="@string/input_note"
 	                android:textColor="@color/font_major_dark"
