--- a/app/src/main/res/layout/activity_start_sign_in.xml
+++ b/app/src/main/res/layout/activity_start_sign_in.xml
@@ -7,7 +7,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:contentDescription="@string/background"
         android:scaleType="fitXY"
         android:src="@drawable/start_background" />
@@ -16,90 +15,87 @@
         android:id="@+id/backImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:padding="16dp"
         android:contentDescription="@string/back"
         android:src="@drawable/back_drawable" />
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="72dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/start_icon"
-        android:id="@+id/imageView2"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <EditText
-        android:id="@+id/usernameEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="@string/input_username"
-        android:inputType="text"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white"
-        android:textSize="18sp"
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="72dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/start_icon" />
 
-    <include 
-        android:id="@+id/signInDivider"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/usernameEditText"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+        <EditText
+            android:id="@+id/usernameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:hint="@string/input_username"
+            android:inputType="text"
+            android:textColor="@color/font_major_light"
+            android:textColorHint="@color/hint_white"
+            android:textSize="18sp"
+            android:background="@null"
+            android:textCursorDrawable="@null" />
 
-    <EditText
-        android:id="@+id/passwordEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/signInDivider"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="@string/input_password"
-        android:inputType="textPassword"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white"
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
 
-    <include 
-        android:id="@+id/passwordDivider"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/passwordEditText"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+        <EditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:hint="@string/input_password"
+            android:inputType="textPassword"
+            android:textColor="@color/font_major_light"
+            android:textColorHint="@color/hint_white"
+            android:background="@null"
+            android:textCursorDrawable="@null" />
 
-    <Button
-        android:id="@+id/signInButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/passwordDivider"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/button_long_light_solid_drawable"
-        android:text="@string/sign_in"
-        android:textColor="@color/start_button_text_color" />
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
+
+        <Button
+            android:id="@+id/signInButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/button_light_solid_drawable"
+            android:text="@string/sign_in"
+            android:textColor="@color/start_button_text_color" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/forgotTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:padding="16dp"
         android:text="@string/forgot_password"
         android:textSize="14sp"
