--- a/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
+++ b/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
@@ -7,7 +7,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:contentDescription="@string/background"
         android:scaleType="fitXY"
         android:src="@drawable/start_background" />
@@ -16,144 +15,140 @@
         android:id="@+id/backImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:padding="16dp"
         android:contentDescription="@string/back"
         android:src="@drawable/back_drawable" />
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/start_icon" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <EditText
-        android:id="@+id/phoneEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="@string/input_phone"
-        android:inputType="text|phone"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="32dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/start_icon" />
 
-    <include 
-        android:id="@+id/divider1"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/phoneEditText"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+        <EditText
+            android:id="@+id/phoneEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:hint="@string/input_phone"
+            android:inputType="text|phone"
+            android:textColor="@color/font_major_light"
+            android:textColorHint="@color/hint_white"
+            android:background="@null"
+            android:textCursorDrawable="@null" />
 
-    <EditText
-        android:id="@+id/passwordEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/phoneEditText"
-        android:layout_alignRight="@+id/phoneEditText"
-        android:layout_below="@+id/divider1"
-        android:layout_marginTop="12dp"
-        android:hint="@string/input_password"
-        android:inputType="textPassword"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
 
-    <include 
-        android:id="@+id/divider2"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/passwordEditText"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+        <EditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:hint="@string/input_password"
+            android:inputType="textPassword"
+            android:textColor="@color/font_major_light"
+            android:textColorHint="@color/hint_white"
+            android:background="@null"
+            android:textCursorDrawable="@null" />
 
-    <EditText
-        android:id="@+id/confirmPasswordEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/phoneEditText"
-        android:layout_alignRight="@+id/phoneEditText"
-        android:layout_below="@+id/divider2"
-        android:layout_marginTop="12dp"
-        android:hint="@string/input_confirm_password"
-        android:inputType="textPassword"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
 
-    <include 
-        android:id="@+id/divider3"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/confirmPasswordEditText"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+        <EditText
+            android:id="@+id/confirmPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:hint="@string/input_confirm_password"
+            android:inputType="textPassword"
+            android:textColor="@color/font_major_light"
+            android:textColorHint="@color/hint_white"
+            android:background="@null"
+            android:textCursorDrawable="@null" />
 
-    <EditText
-        android:id="@+id/codeEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/phoneEditText"
-        android:layout_toLeftOf="@+id/acquireCodeButton"
-        android:layout_below="@+id/divider3"
-        android:layout_marginTop="12dp"
-        android:hint="@string/input_code"
-        android:textColor="@color/font_major_light"
-        android:textColorHint="@color/hint_white" 
-        android:background="@null"
-        android:textCursorDrawable="@null" />
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
 
-    <Button
-        android:id="@+id/acquireCodeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_below="@+id/divider3"
-        android:layout_alignRight="@+id/phoneEditText"
-        android:layout_marginTop="6dp"
-		android:background="@drawable/button_short_light_solid_drawable"
-		android:gravity="center"
-        android:text="@string/acquire_code"
-        android:textColor="@color/start_button_text_color"
-        android:textSize="16sp" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="10dp" >
 
-    <include 
-        android:id="@+id/divider4"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_below="@+id/acquireCodeButton"
-        android:layout_marginTop="6dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        layout="@layout/view_start_divider"/>
+            <EditText
+                android:id="@+id/codeEditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:hint="@string/input_code"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/font_major_light"
+                android:textColorHint="@color/hint_white"
+                android:background="@null"
+                android:textCursorDrawable="@null" />
 
-    <Button
-        android:id="@+id/signUpButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/divider4"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/button_long_light_solid_drawable"
-        android:text="@string/sign_up"
-        android:textColor="@color/start_button_text_color"
-        android:textSize="20sp" />
+            <Button
+                android:id="@+id/acquireCodeButton"
+                android:layout_width="90dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/button_light_solid_drawable"
+                android:gravity="center"
+                android:text="@string/acquire_code"
+                android:textColor="@color/start_button_text_color"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            layout="@layout/view_start_divider"/>
+
+        <Button
+            android:id="@+id/signUpButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/button_light_solid_drawable"
+            android:text="@string/sign_up"
+            android:textColor="@color/start_button_text_color"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </RelativeLayout>
