--- a/app/src/main/res/layout/list_report_detail.xml
+++ b/app/src/main/res/layout/list_report_detail.xml
@@ -46,10 +46,10 @@
 		<RelativeLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:layout_marginTop="22dp"
-		    android:layout_marginBottom="22dp"
-		    android:layout_marginLeft="16dp"
-		    android:layout_marginRight="16dp" >
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="4dp" >
 			
 			<TextView
 			    android:id="@+id/timeTextView"
@@ -63,8 +63,8 @@
 			    android:id="@+id/approveInfoTextView"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:layout_alignParentTop="true"
 			    android:layout_alignParentRight="true"
+                android:padding="12dp"
 			    android:text="@string/approve_info_hint"
 			    android:textColor="@color/major_dark"
 			    android:textSize="14sp" />
