--- a/app/src/main/res/layout/window_reim_time.xml
+++ b/app/src/main/res/layout/window_reim_time.xml
@@ -19,13 +19,13 @@
 
 	    <Button
 	        android:id="@+id/confirmButton"
-	        android:layout_width="wrap_content"
+	        android:layout_width="80dp"
 	        android:layout_height="30dp"
 	        android:layout_alignParentRight="true"
 	        android:layout_alignParentTop="true"
 	        android:layout_marginTop="10dp"
 	        android:layout_marginRight="16dp"
-	        android:background="@drawable/button_short_dark_drawable"
+	        android:background="@drawable/button_dark_drawable"
 	        android:text="@string/confirm"
 			android:textColor="@color/button_text_light_color" />
 	
