--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    
+
+    <dimen name="button_corner_radius">8dp</dimen>
+    <dimen name="button_stroke_width">1dp</dimen>
+    <dimen name="button_height">48dp</dimen>
     <dimen name="radio_button_corner_radius">5dp</dimen>
     <dimen name="status_corner_radius">2dp</dimen>
     <dimen name="tag_corner_radius">5dp</dimen>
