--- a/app/src/main/res/layout/activity_me_send_invite.xml
+++ b/app/src/main/res/layout/activity_me_send_invite.xml
@@ -54,7 +54,8 @@
             android:layout_marginRight="16dp"
             android:background="@null"
             android:hint="@string/input_username"
-            android:textSize="14sp" />
+            android:textColor="@color/font_major_dark"
+            android:textSize="14sp"/>
         
     </RelativeLayout>
 
